# Stellar-Game-Studio

./: CLAUDE.md  Cargo.toml  findings.md  progress.md  scene-1.json  task_plan.md
.claude/commands/: feature.md
circuits/accusation/: Nargo.toml  Prover.toml
circuits/clue-verify/: Nargo.toml
circuits/compute_commitment/: Nargo.toml  Prover.toml
contracts/ultrahonk-verifier/: Cargo.toml
contracts/ultrahonk-verifier/src/: lib.rs
contracts/zk-detective/: Cargo.toml
contracts/zk-seek/: Cargo.toml  README.md
docs/: DRY-CREEK-STORY-BIBLE.md  STORY-AUTHORING-GUIDE.md  STORY-DESIGN-PROMPT.md  game-plan.md  index.html
docs/architecture/: data-model.md  technical-stack.md  zk-architecture.md
docs/assets/: index--5149Q9s.js  index-B7mmsxxy.css  index-fDiuAua4.js
docs/case-content/: meridian-manor.md
docs/characters/: detectives.md  suspects.md
docs/features/: F01-case-data-system.md  F02-room-navigation.md  F03-inventory-system.md  F04-dialogue-engine.md  F05-accusation-system.md  F06-zk-accusation-circuit.md  F07-zk-clue-circuit.md  F08-detective-contract.md  F09-leaderboard.md  F10-game-hub-integration.md  F11-scoring-system.md  F12-single-player-flow.md  F13-frontend-ui.md  (+4 more)
scripts/: compute-poseidon-commitment.ts  create-scene.ts  deploy-verifier.ts  deploy.ts  setup-detective-case.ts  setup.ts
zk-detective-frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
zk-detective-server/: package-lock.json  package.json  tsconfig.json  wrangler.toml
zk-seek-frontend/: index.html  package.json
(+126 files in other folders)
