[workspace]
resolver = "2"
members = [
  "contracts/mock-game-hub",
  "contracts/twenty-one",
  "contracts/number-guess",
  "contracts/dice-duel",
  "contracts/zk-seek",
  "contracts/zk-detective",
  "contracts/ultrahonk-verifier",
  "vendor/ultrahonk-soroban-verifier",
]

[workspace.package]
version = "0.1.2"

[workspace.dependencies]
soroban-sdk = "25.0.2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
