[package]
name = "ultrahonk-verifier"
version.workspace = true
edition = "2021"

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
ultrahonk_soroban_verifier = { path = "../../vendor/ultrahonk-soroban-verifier" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[lib]
crate-type = ["cdylib"]
